fix background on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -4,8 +4,8 @@
 }
 
 html {
-    background: url(images/baseball_bat.jpeg) no-repeat center fixed; 
-    background-size: cover;
+    background: url(images/baseball_bat.jpeg) no-repeat center; 
+    /*background-size: cover;*/
   }
 
 body {
@@ -93,7 +93,7 @@ tr:nth-child(odd) {
 /* Style the logo */
 .logo {
   width: 30%;
-  max-width: 450px;
+  max-width: 390px;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
